# AppliedRoboticsStudentInterface

./: CMakeLists.txt  README.md  README_doxygen.md  camera_params.config  camera_params_arena.config  config_params.cfg  sample.conf
camera_image_captured_gazebo/: list.xml
docs/html/: README__doxygen_8md.html  annotated.html  classClearanceObjective-members.html  classClearanceObjective.html  classClearanceObjective__coll__graph.map  classClearanceObjective__coll__graph.md5  classObstacles-members.html  classObstacles.html  classRRTObstacles-members.html  classRRTObstacles.html  classRRTSTAR-members.html  classRRTSTAR.html  classRRTSTAR__coll__graph.map  classRRTSTAR__coll__graph.md5  classValidityChecker-members.html  classValidityChecker.html  classValidityChecker__coll__graph.map  classValidityChecker__inherit__graph.md5  classconfig__Params-members.html  classconfig__Params.html  classconfig__Params__ProcessMap-members.html  classconfig__Params__ProcessMap.html  classconfig__Params__planPath-members.html  classconfig__Params__planPath.html  classes.html  dir_000000_000001.html  dir_000000_000002.html  dir_000000_000003.html  dir_000001_000000.html  dir_000001_000003.html  dir_14806dca0e01e02c1b3e2c35c2d8d9f7.html  dir_2d63037d3c90bbd3001cbce1db844cde.html  dir_2d63037d3c90bbd3001cbce1db844cde_dep.map  dir_444371a3aeb5ac26a8a04d71b22fe960.html  dir_654ee74352d3d17a727e0ab82c87d20c.html  dir_839ab3d73c4a4e9cc10ccfec51b0b515.html  dir_f56d48452e298091a290bc1200c44e7b.html  dir_f77a644fded742ea05ed17fa0fdf6fe1.html  dir_f77a644fded742ea05ed17fa0fdf6fe1_dep.map  dir_f77a644fded742ea05ed17fa0fdf6fe1_dep.md5  (+116 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  (+31 more)
docs/latex/: README__doxygen_8md.tex  annotated.tex  classClearanceObjective.tex  classClearanceObjective__coll__graph.md5  classObstacles.tex  classRRTObstacles.tex  classRRTSTAR.tex  classRRTSTAR__coll__graph.md5  classValidityChecker.tex  classValidityChecker__inherit__graph.md5  classconfig__Params.tex  classconfig__Params__ProcessMap.tex  classconfig__Params__planPath.tex  dir_14806dca0e01e02c1b3e2c35c2d8d9f7.tex  dir_2d63037d3c90bbd3001cbce1db844cde.tex  dir_2d63037d3c90bbd3001cbce1db844cde_dep.md5  dir_444371a3aeb5ac26a8a04d71b22fe960.tex  dir_654ee74352d3d17a727e0ab82c87d20c.tex  dir_839ab3d73c4a4e9cc10ccfec51b0b515.tex  dir_f56d48452e298091a290bc1200c44e7b.tex  dir_f77a644fded742ea05ed17fa0fdf6fe1.tex  dubins__local_8cpp.tex  dubins__local_8cpp__incl.md5  dubins__local_8h.tex  dubins__local_8h__dep__incl.md5  dubins__local_8h__incl.md5  extrisnicCalib_8cpp.tex  extrisnicCalib_8cpp__incl.md5  files.tex  findRobot_8cpp.tex  findRobot_8cpp__incl.md5  hierarchy.tex  index.tex  loadImage_8cpp.tex  loadImage_8cpp__incl.md5  namespacestudent.tex  obstacles_8cpp.tex  obstacles_8cpp__incl.md5  obstacles_8h.tex  obstacles_8h__dep__incl.md5  (+29 more)
include/: configHeaders.hpp  debugHeaders.hpp  dubins_local.h  ompl_planning.hpp  planPath.hpp
src/: dubins.cpp  dubins_local.cpp  extrisnicCalib.cpp  findRobot.cpp  loadImage.cpp  planPath.cpp  processMap.cpp  student_interface.cpp  test_dubins.cpp
src/RRTStar/: obstacles.cpp  obstacles.h  rrtstar.cpp  rrtstar.h
src/demo_shape_detection/: demo_hsv_filter.cpp
